Finishing off Chapter 3

--- a/code/chap01.ipynb
+++ b/code/chap01.ipynb
@@ -88,13 +88,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hi there!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Using the notebooks\n",
     "\n",
     "The notebooks for each chapter contain the code from the chapter, along with some addition examples, some explanatory text, and some exercises.  I recommend you read the chapter first to understand the concepts and vocabulary, then run the notebook to review what you learned and see it in action, and then attempt the exercises.\n",
@@ -158,7 +151,7 @@
     "\n",
     "The following cells contain code from the beginning of Chapter 1.\n",
     "\n",
-    "`modsim` defined `UNITS`, which contains variables representing pretty much every unit you've ever heard of.  The following to lines create new variables named `meter` and `second`."
+    "`modsim` defined `UNITS`, which contains variables representing pretty much every unit you've ever heard of.  The following lines create new variables named `meter` and `second`."
    ]
   },
   {
